# portfolio_back

./: README.md  procfile  pyproject.toml  requeriments.txt  requirements.txt
.github/: workflow.yml
.github/workflows/: workflow.yml
django_project/: settings.py  urls.py
port/: admin.py  models.py  serializers.py  views.py
port/migrations/: 0001_initial.py
